[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]

[node name="LobbyRoot" type="Node2D"]
script = ExtResource( 1 )

[node name="hostGameButton" type="Button" parent="."]
margin_left = 386.269
margin_top = 212.998
margin_right = 623.269
margin_bottom = 309.998
text = "Host Game"

[node name="joinGameButton" type="Button" parent="."]
margin_left = 389.36
margin_top = 348.997
margin_right = 626.36
margin_bottom = 445.997
text = "Join Game"
[connection signal="pressed" from="hostGameButton" to="." method="_on_hostGameButton_pressed"]
[connection signal="pressed" from="joinGameButton" to="." method="_on_joinGameButton_pressed"]
